@@ -41,6 +41,11 @@ setup(
     zip_safe=False,
     install_requires=['setuptools',
                       'zdaemon',
+                      'zope.interface',
+                      'zope.component',
+                      'zope.security',
+                      'zope.publisher',
+                      'zope.dottedname',
                       'zope.app.wsgi',
                       'zope.app.debug',
                       ],
