@@ -5,10 +5,35 @@ import zdaemon.zdctl
 import zope.app.wsgi
 import zope.app.debug
 
+from zope.component import provideAdapter
+from zope.security.interfaces import IUnauthorized
+from zope.publisher.interfaces import IReRaiseException
+from zope.dottedname.resolve import resolve
+
 def application_factory(global_conf, **local_conf):
     zope_conf = local_conf.get('zope_conf', global_conf.get(
             'zope_conf', os.path.join('parts', 'etc', 'zope.conf')))
     return zope.app.wsgi.getWSGIApplication(zope_conf)
+
+
+def debug_application_factory(global_conf, **local_conf):
+    # First create the application itself
+    app = application_factory(global_conf, **local_conf)
+    # Then register the IReRaiseException adaptation for
+    # various types of exceptions that are exempt from being
+    # raised by the publisher.
+    def do_not_reraise_exception(context):
+        return lambda : False
+    iface_names = local_conf.get('exempt-exceptions', '').split(',')
+    for name in iface_names:
+        name = name.strip()
+        if not name:
+            continue
+        iface = resolve(name)
+        provideAdapter(do_not_reraise_exception, (iface, ), IReRaiseException)
+    # Return the created application
+    return app
+    
 
 def interactive_debug_prompt(zope_conf=os.path.join('parts', 'etc',
                                                     'zope.conf')):
